# MySwing

./: .env.example  .gitattributes  .gitignore  LICENSE  README.ko.md  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_hot_path_indexes.py
app/: __init__.py  main.py
app/api/: __init__.py  analyses.py  dependencies.py  history.py  profile.py  router.py  upload.py  videos.py
app/core/: celery_app.py  config.py  constants.py  database.py
app/db/: __init__.py  models.py  session.py
app/models/: __init__.py  bat.py  biomechanics.py  domain.py  enums.py  evaluation.py  pose.py  report.py  swing.py  user_profile.py  video.py
app/pipeline/: __init__.py  bat_detector.py  bat_tracker.py  batter_identifier.py  biomechanics_analyzer.py  constants.py  pose_constrained_bat_tracker.py  pose_estimator.py  pose_tracker.py  report_generator.py  swing_classifier.py  swing_evaluator.py  trajectory_predictor.py  wrist_bat_estimator.py
app/schemas/: __init__.py  analysis.py  history.py  user_profile.py  video.py
app/tasks/: __init__.py  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: check_h264.py  check_mediapipe.py  check_overlay.py  create_test_user.py  debug_overlay.py  debug_report.py  frontend-install.sh  frontend-test.sh  frontend-typecheck.sh  install-node-links.sh  install_docker.sh  mirror_invariance_benchmark.py  register_video.py  run_mirror_sample_analysis.py  seed_reference_data.py
tests/: conftest.py  test_models.py  test_schemas.py
(+111 files in other folders)
