[project]
name = "myswing"
version = "0.1.0"
description = "Baseball Swing Analysis Service - CV-based swing analysis pipeline"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "celery[redis]>=5.4.0",
    "redis>=5.1.1",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "opencv-python-headless>=4.10.0.84",
    "boto3>=1.35.29",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "numpy>=1.26.4",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
ml = [
    "mediapipe>=0.10.14",
]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.112.1",
    "httpx>=0.27.2",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: Property-based tests using Hypothesis",
    "unit: Unit tests",
    "integration: Integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.setuptools.packages.find]
include = ["app*"]
